fix  contrast v4 09_20_22

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@ img.left {
 .box {
   width: 97%;
   height: 120px;
-  background-color:#23d0ef;
+  background-color:#2E798A;
   -moz-border-radius: 7px;
   -webkit-border-radius: 7px;
   padding: 10px;
@@ -32,7 +32,7 @@ img.left {
   height: 60px;
   
 
-  background-color:#23d0ef;
+  background-color:#2E798A;
   /*border: 1px solid #000000;*/
   -moz-border-radius: 7px;
   -webkit-border-radius: 7px;
